exercicios/traefik22/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-daemon-set
  # namespace: whoami5
spec:
  type: ClusterIP
  ports:
  - port: 80
    name: traefik
    targetPort: 8080
  selector:
    app: traefik
