exercicios/traefik22/app2.yml

---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami5
  # namespace: whoami5
  labels:
    allow.http: "false"
    application: whoami5
spec:
  replicas: 3
  selector:
    matchLabels:
      application: whoami5
  template:
    metadata:
      labels:
        application: whoami5
    spec:
      containers:
      - name: whoami5
        image: jwilder/whoami
        ports:
        - containerPort: 8000
        securityContext:
          privileged: true


---
apiVersion: v1
kind: Service
metadata:
  name: whoami5
  # namespace: whoami5
spec:
  type: ClusterIP
  ports:
  - port: 80 # Porta a ser exposta pelo SERVICE
    targetPort: 8000 # Porta que a aplicação está rodando no POD
  selector:
    application: whoami5


---
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: whoami5
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  ingressClassName: traefik
  rules:
    - host: app.rancher.itacarambi.tec.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami5
                port:
                  number: 80
