exercicios/traefik22/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: traefik-dashboard
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: default
spec:
  ingressClassName: traefik
  rules:
    - host: traefik.rancher.itacarambi.tec.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik-daemon-set
                port:
                  number: 8080
